# example-application

./: README.md
app/: CMakeLists.txt
app/boards/: nrf5340dk_nrf5340_cpuapp.overlay
